//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Kham Tham" {
  database_type: 'MySQL'
  Note: ''
}

Table users {
  id String [pk]
  username String [unique, not null]
  email String [unique, not null]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  RoomCreated rooms [not null]
}

Table players {
  id String [pk]
  playername String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  PlayerJoinedRoom player_room [not null]
}

Table rooms {
  id Int [pk, increment]
  code String [not null]
  owner users [not null]
  ownerId String [not null]
  name String [not null]
  mode GameMode [not null]
  status RoomStatus [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  RoomQuestion room_question [not null]
  PlayerJoinedRoom player_room [not null]
}

Table player_room {
  id Int [pk, increment]
  player players [not null]
  playerId String [not null]
  room rooms [not null]
  roomId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  PlayerAnswerQuestion player_room_question [not null]
}

Table player_room_question {
  id Int [pk, increment]
  PlayerJoinedRoom player_room [not null]
  playerJoinedRoomId Int [not null]
  RoomQuestion room_question [not null]
  roomQuestionId Int [not null]
  Question4Answer question_4_answers [not null]
  MultiSelectAnswer multi_select_answers [not null]
  TypeAnswer type_answers [not null]
}

Table room_question {
  id Int [pk, increment]
  room rooms [not null]
  roomId Int [not null]
  type QuestionType [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Question4Question question_4_questions [not null]
  MultiSelectQuestion multi_select_questions [not null]
  TypeQuestion type_questions [not null]
  PlayerAnswerQuestion player_room_question [not null]
}

Table question_4_questions {
  id Int [pk, increment]
  Question room_question [not null]
  roomQuestionId Int [not null]
  question String [not null]
  choice1 String [not null]
  choice2 String [not null]
  choice3 String [not null]
  choice4 String [not null]
  answer Int [not null]
  timeDisplayQuestion Int [not null]
  timeAnswerQuestion Int [not null]
  score Float [not null]
}

Table question_4_answers {
  id Int [pk, increment]
  answer Int [not null]
  PlayerAnswerQuestion player_room_question [not null]
  playerAnswerQuestionId Int [not null]
}

Table multi_select_questions {
  id Int [pk, increment]
  Question room_question [not null]
  roomQuestionId Int [not null]
  question String [not null]
  choice1 String [not null]
  choice2 String [not null]
  choice3 String [not null]
  choice4 String [not null]
  answer Json [not null]
  timeDisplayQuestion Int [not null]
  timeAnswerQuestion Int [not null]
  score Float [not null]
}

Table multi_select_answers {
  id Int [pk, increment]
  answer Json [not null]
  PlayerAnswerQuestion player_room_question [not null]
  playerAnswerQuestionId Int [not null]
}

Table type_questions {
  id Int [pk, increment]
  Question room_question [not null]
  roomQuestionId Int [not null]
  question String [not null]
  answer String [not null]
  timeDisplayQuestion Int [not null]
  timeAnswerQuestion Int [not null]
  score Float [not null]
}

Table type_answers {
  id Int [pk, increment]
  answer String [not null]
  PlayerAnswerQuestion player_room_question [not null]
  playerAnswerQuestionId Int [not null]
}

Enum RoomStatus {
  WAITING
  PLAYING
  ENDED
}

Enum GameMode {
  COMPETITIVE
  COOPERATIVE
}

Enum QuestionType {
  QUIZ_4_ANSWER
  MULTI_SELECT_ANSWER
  TYPE_ANSWER
}

Ref: rooms.ownerId > users.id

Ref: player_room.playerId > players.id

Ref: player_room.roomId > rooms.id

Ref: player_room_question.playerJoinedRoomId > player_room.id

Ref: player_room_question.roomQuestionId > room_question.id

Ref: room_question.roomId > rooms.id

Ref: question_4_questions.roomQuestionId > room_question.id

Ref: question_4_answers.playerAnswerQuestionId > player_room_question.id

Ref: multi_select_questions.roomQuestionId > room_question.id

Ref: multi_select_answers.playerAnswerQuestionId > player_room_question.id

Ref: type_questions.roomQuestionId > room_question.id

Ref: type_answers.playerAnswerQuestionId > player_room_question.id